<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutenticationActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:hint="@string/phone_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:hint="@string/e_mail"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCheckers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

    <LinearLayout
        android:id="@+id/linearLayoutCheckers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupShift"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail">

        <CheckBox
            android:id="@+id/checkBoxEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_e_mail" />

        <CheckBox
            android:id="@+id/checkBoxPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_phone_number" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupShift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCheckers">
        <RadioButton
            android:id="@+id/morningRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"/>
        <RadioButton
            android:id="@+id/afternoonRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afternoon"/>
        <RadioButton
            android:id="@+id/nightRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/verify"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupShift" />

</androidx.constraintlayout.widget.ConstraintLayout>